tests/gabc-dump/should-fail/bad-shape.gabc
name: bad shape change;
%%
(c3) g(o)
